--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="instagram-footer">
-                        <p>The Adonis Lab Comida sana para gente con prisa </p>
+                        <p>The Adonis Lab Comida sana para gente con prisa M</p>
                 </div>
             </div>
         </div>
